fix: forget password to white space nowrap

--- a/packages/client/src/page_components/auth/login/Content/styles.scss
+++ b/packages/client/src/page_components/auth/login/Content/styles.scss
@@ -36,6 +36,7 @@
                 right: 15px;
                 transform: translateY(-50%);
                 font-size: 12px;
+                white-space: nowrap;
             }
         }
 
